# hold-toward-life

./: .gitignore  CASE-DOSSIER.md  LANDSCAPE.md  LICENSE  PROTOCOL.md  README.md
eval/: LABELING.md  crisis_lines.json  judge.py  report.json  run.py  scenarios.json  score.py  validate.py
guardian/: guardian.py
hub-validator/: README.md  pyproject.toml
hub-validator/tests/: test_hold_toward_life.py
hub-validator/validator/: __init__.py  _guardian.py  _scorer.py  crisis_lines.json  main.py
psychosis/: EARLY-WARNING.md  early_warning.py
